[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/hero.gd" type="Script" id=1]
[ext_resource path="res://images/hero.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 15.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[node name="Hero" type="KinematicBody2D" groups=["hero"]]
script = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "idle"
playing = true

[node name="side_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 28
collide_with_areas = true

[node name="diagonal_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 21 )
collision_mask = 12

[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
